<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/Hijau_Segar"
    >


    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="217dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="QR Scan Barcode"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"

            />

        <ImageView
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/scan_now"
            />

        <AbsoluteLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </AbsoluteLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/scan_qr_code" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/nama"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewNama"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Sud_Ulam_Cahyana"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:layout_marginTop="-40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/kelas"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewKelas"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/ti_21_c4"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="-40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/nim"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewNIM"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/_312110246"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:layout_marginTop="-40dp"/>

    </LinearLayout>
</RelativeLayout>